--- a/src/app/users/all-posts-by-user/all-posts-by-user.component.html
+++ b/src/app/users/all-posts-by-user/all-posts-by-user.component.html
@@ -1,3 +1,7 @@
-<tbody>
-    <app-post-row [post]="userPosts"><br/></app-post-row>
-</tbody>
+<div class="container well well-sm">
+    <table class="table table-responsive table-striped well-sm">
+        <tbody>
+            <app-post-row [post]="userPosts"><br/></app-post-row>
+        </tbody>
+    </table>
+</div>
