--- a/src/app/forum/home/home.component.html
+++ b/src/app/forum/home/home.component.html
@@ -3,26 +3,8 @@
         <div class="container nopadding">
             <div class="row" style="margin-top: 100px">
                 <div class="center-heading">
-                    <h1 class="main-heading">Our top competitions</h1>
+                    <h1 class="main-heading">Welcome to our forum</h1>
                 </div>
-            </div>
-            <div class="carousel slide" id="myCarousel" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li class="" data-target="#myCarousel" data-slide-to="0"></li>
-                    <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-                    <li data-target="#myCarousel" data-slide-to="3" class=""></li>
-                    <li data-target="#myCarousel" data-slide-to="4" class=""></li>
-                </ol>
-
-
-                <div class="carousel-inner" role="listbox">
-                    <app-moving-post class="item" *ngFor="let post of posts | sort: sortBy: 5" [post]="post"></app-moving-post>
-                </div>
-                <a class="left carousel-control" role="button" data-slide="prev" href="#myCarousel"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">Previous</span></a>
-                <a class="right carousel-control" role="button" data-slide="next" href="#myCarousel">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
-                        </span> <span class="sr-only">Next</span></a>
             </div>
         </div>
     </div>
@@ -41,25 +23,26 @@
 
             <div class="section text-center section-landing">
                 <div class="row">
-                    <div class="col-md-6">
-                        <h3 class="title home-list-title">Upcomming competitions</h3>
-                        <ul class="upcomming">
-                            <article class="search-result row">
-                                <div class="col-xs-4 col-sm-4">
-                                    <a class="home-thumbnail" href="#" title="Lorem ipsum"><img src="https://www.smashingmagazine.com/wp-content/uploads/2015/06/10-dithering-opt.jpg" alt="Competition image"></a>
-                                </div>
-                                <div class="col-xs-4 col-sm-4 right-border">
-                                    <ul class="meta-search">
-                                        <li><i class="glyphicon glyphicon-calendar"></i><span>Wed Jun 14 2017 00:00:00 GMT+0000 (UTC)</span></li>
-                                        <li><i class="glyphicon glyphicon-tags"></i><span> <a class="category-title">Climbing</a></span></li>
-                                    </ul>
-                                </div>
-                                <div class="col-xs-4 col-sm-4 excerpet">
-                                    <h3><a href="/competitions/5844a067cea03d00118d87ca">Climbing Musala </a></h3>
-                                    <p> Rila mountain</p>
-                                </div><span class="clearfix borda"></span>
-                            </article>
-                        </ul>
+                    <div class="col-md-3 col-md-offset-2">
+                        <h3 class="title home-list-title">Most recent posts</h3>
+                        <div class="table-responsive">
+                            <table class="table users-table">
+                                <thead class="thead-inverse">
+                                    <tr>
+                                        <th>#</th>
+                                        <th>Title</th>
+                                        <th>Likes</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let post of (posts | sort | splice : 10);  let i = index">
+                                        <td>{{i + 1}}</td>
+                                        <td><a href="/forum/post/{{post._id}}">{{post.title}}</a></td>
+                                        <td>{{post.likes}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                     <div class="col-md-3 col-md-offset-2">
                         <h3 class="title home-list-title">Top Posts</h3>
@@ -73,9 +56,9 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let post of posts | sort: 'likes' : 10;  let i = index">
-                                        <td>{{i}}</td>
-                                        <td><a href="/forum/{{post.title}}">{{post.title}}</a></td>
+                                    <tr *ngFor="let post of (posts | sort: 'likes' | splice : 10);  let i = index">
+                                        <td>{{i + 1}}</td>
+                                        <td><a href="/forum/post/{{post._id}}">{{post.title}}</a></td>
                                         <td>{{post.likes}}</td>
                                     </tr>
                                 </tbody>
