--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,16 +19,20 @@
                 <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/category']">Categories</a></li>
                 <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/login']">Login</a></li>
                 <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/register']">Register</a></li>
-                <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum/create']">Forum</a></li>
+                <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum/1']">Forum</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right" *ngIf="isUserLoggedIn">
                 <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/profile/home']">Profile</a></li>
                 <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/logout']" (click)="logout()">Logout</a></li>
-                <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum']">Forum</a></li>
+                <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum/1']">Forum</a></li>
             </ul>
         </div>
     </div>
 </nav>
 <div class="wrapper">
     <router-outlet></router-outlet>
+</div>
+
+<div class="footer">
+    <app-footer></app-footer>
 </div>
