--- a/src/app/profile/profile-inbox/profile-inbox.component.html
+++ b/src/app/profile/profile-inbox/profile-inbox.component.html
@@ -17,10 +17,11 @@
         <td biggerFont *ngIf="message.isViewed">{{message.message}}</td>
         <td *ngIf="message.isViewed">{{message.date | date:'medium'}}</td>
         <td>
-          <button type="button">  
+          <button *ngIf="!message.isViewed" (click)="updateMessageToViewed(message._id)" type="button">  
           <i class="fa fa-check green-check-mark" aria-hidden="true"></i>
           </button></td>
       </tr>
     </tbody>
   </table>
 </div>
+<simple-notifications [options]="options"></simple-notifications>
