create category button added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,7 @@
                 <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/logout']" (click)="logout()">Logout</a></li>
                 <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum/1']">Forum</a></li>
                 <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum/create']">Create Post</a></li>
+                <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/category/create']">Create Category</a></li>
             </ul>
         </div>
     </div>
