--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-    <footer class="footer navbar-fixed-bottom">
+    <footer class="footer navbar-bottom">
         <div class="container">
             <nav class="pull-left">
                 <ul>
