--- a/src/app/forum/home/home.component.html
+++ b/src/app/forum/home/home.component.html
@@ -14,10 +14,8 @@
         <div class="section text-center section-landing">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="title">Conquer Bulgaria is your competitions online guide!</h2>
-                    <h5 class="description">Welcome to Bulagria’s Biggest Competitions Website, with over 100,000 members! Since 2016 we have set the standard in the way that competitions are communicated. First up, we are based here in Sofia, whilst a lot of so called ‘Aussie’
-                        sites are located all over the world. Secondly, your membership is Free. There are no special locked areas, anything on our site you can click away to your heart’s content. The reason the media comes to us is simple, we know the
-                        game better than anyone else. Competitions Guide is all about fresh competitions, delivered daily. We invite you to Join us - Free!</h5>
+                    <h2 class="title">Angularoverflow is your guide in the world of angular</h2>
+                    <h5 class="description">This is simple information about the forum. Nothing fancy!</h5>
                 </div>
             </div>
 
@@ -77,8 +75,4 @@
     <script src="/static/bower_components/material-kit/assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
     <script src="/static/bower_components/material-kit/assets/js/material-kit.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js"></script>
-    <script src="/static/js/script.min.js" type="text/javascript"></script>
-    <script src="/static/js/utils/requester.min.js" type="text/javascript"></script>
-    <script src="/static/js/utils/notifier.min.js" type="text/javascript"></script>
-    <script src="/static/js/load-category.min.js" type="text/javascript"></script>
 </div>
